Modify old app to use slug URL in blog

--- a/web/index.html
+++ b/web/index.html
@@ -4,6 +4,7 @@
         <title ng-bind="MetaTags.title">
             CAMDY
         </title>
+         <base href="/web/">
         <meta content="{{MetaTags.description}}" name="description"/>
         <meta content="{{MetaTags.keywords}}" name="keywords"/>
         <meta content="{{value}}" ng-repeat="(key, value) in MetaTags.properties" property="{{key}}"/>
