--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,7 @@
         <!-- BURGER MENU CSS
     <link rel="stylesheet" type="text/css" href="css/burgermenu.css" />-->
         <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" rel="stylesheet"/>
-        <script src="js/script.js">
+        <script src="js/script.min.js">
         </script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js">
         </script>
@@ -72,34 +72,14 @@
     </script>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.15.0/lodash.min.js" type="text/javascript">
     </script>
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-local-storage/0.5.0/angular-local-storage.js"></script>
 </body>
 <script src="js/app.controller.js" type="text/javascript">
-</script>
-<script src="js/main.js" type="text/javascript">
 </script>
 
 <script src="js/app.directive.js" type="text/javascript">
 </script>
 <script src="js/app.factories.js" type="text/javascript">
 </script>
-<script src="js/controllers/ImagesAddGraphicController.js" type="text/javascript">
-</script>
-<script src="js/controllers/ImagesBoxController.js" type="text/javascript">
-</script>
-<script src="js/controllers/ImagesController.js" type="text/javascript">
-</script>
-<script src="js/controllers/ImagesGraphicsController.js" type="text/javascript">
-</script>
-<script src="js/controllers/ImagesUploadController.js" type="text/javascript">
-</script>
-<script src="js/controllers/TextController.js" type="text/javascript">
-</script>
-<script src="js/controllers/TextEditController.js" type="text/javascript">
-</script>
-<script src="js/services/ApiService.js" type="text/javascript">
-</script>
-<script src="js/customize.controller.js" type="text/javascript">
-</script>
-
-
 
