UI change to show only printshop page

--- a/web/index.html
+++ b/web/index.html
@@ -35,15 +35,15 @@
 </html>
 <body>
 <div id="wrapper">
-    <div ng-include="'partials/inc_header_nav.html'">
-    </div>
+      <!--<div ng-include="'partials/inc_header_nav.html'">
+    </div>-->
     <!--<div ng-include="'inc_nav_mobile.html'"></div> -->
     <div id="content">
         <div ui-view="">
         </div>
     </div>
-    <div ng-include="'partials/inc_footer.html'">
-    </div>
+   <!-- <div ng-include="'partials/inc_footer.html'">
+    </div>-->
 </div>
 
     <!-- angular JS app -->
